--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nikolag/laravel-square",
+    "name": "treesapuk/laravel-square",
     "description": "Square API integration with Laravel built on nikolag/core",
     "keywords": ["square", "laravel", "square laravel integration", "square-laravel", "library", "package", "nikolag", "nikolag square", "nikolag-square", "laravel square"],
     "license": "MIT",
